# CPP-Estrutura-de-Dados

./: README.md
File Manipulation/: README.md  exporta.cpp  testa.cpp
File Manipulation/.github/workflows/: classroom.yml
Final Work/: ArvoreVP.cpp  ArvoreVP.h  CMakeLists.txt  Hash.cpp  Hash.h  Menu.cpp  Menu.h  Movie.cpp  Movie.h  README.md  compress.cpp  compress.h  exporta.cpp  main.cpp  sort.cpp  sort.h
Sorting Algorithms/: exporta.cpp  filme.h  ordena.cpp  sort.cpp  sort.h
Splay Tree/: README.md  splay.h
Trees Algorithms/: CMakeCache.txt  CMakeLists.txt
